--- a/new_demo/WebContent/WEB-INF/web.xml
+++ b/new_demo/WebContent/WEB-INF/web.xml
@@ -13,7 +13,7 @@
 <welcome-file-list>
   <welcome-file>/all</welcome-file>
   <welcome-file>index.html</welcome-file>
-  <welcome-file>index.htm</welcome-file>
+  <welcome-file>index.html</welcome-file>
 </welcome-file-list>
 <!-- 配置  springmvc servlet -->
 <servlet>
